Can now remove an item from the cart. Fixed bugs within the application causing Cart to have a null pointer exception when clicking on an item in the cart.

--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -107,6 +107,8 @@
         android:id="@+id/recyclerView2"
         android:layout_width="368dp"
         android:layout_height="378dp"
+        android:scrollbars="vertical"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/menuRedBox2"
         app:layout_constraintStart_toStartOf="@+id/menuRedBox2"
         app:layout_constraintTop_toTopOf="@+id/menuRedBox2" />
