--- a/app/src/main/res/layout/review_order_item.xml
+++ b/app/src/main/res/layout/review_order_item.xml
@@ -7,14 +7,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="147dp"
         android:background="#00974D4D">
 
         <ScrollView
-            android:layout_width="211dp"
+            android:layout_width="310dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="140dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="-2dp"
             android:layout_marginBottom="94dp">
@@ -35,47 +35,42 @@
             </LinearLayout>
         </ScrollView>
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/cart_item_image"
-            android:layout_width="92dp"
-            android:layout_height="94dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.136"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.23"
-            app:srcCompat="@drawable/latte_circle" />
-
         <TextView
             android:id="@+id/cart_item_name"
-            android:layout_width="207dp"
-            android:layout_height="43dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="23dp"
+            android:layout_width="263dp"
+            android:layout_height="39dp"
+            android:layout_marginLeft="23dp"
             android:layout_marginTop="23dp"
-            android:layout_marginEnd="19dp"
             android:layout_marginBottom="153dp"
-            android:layout_toEndOf="@+id/cart_item_image"
             android:fontFamily="@font/sofia_regular"
             android:text="Item Name"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/cart_item_price"
-            android:layout_width="194dp"
-            android:layout_height="40dp"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/cart_remove_button"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="34dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="26dp"
+            android:layout_toEndOf="@+id/cart_item_name"
+            android:background="@drawable/roundedbutton"
+            android:backgroundTint="#74770C0C"
+            android:text="X"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/cart_item_price"
+            android:layout_width="263dp"
+            android:layout_height="39dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="23dp"
             android:layout_marginTop="55dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="125dp"
-            android:layout_toEndOf="@+id/cart_item_image"
             android:fontFamily="@font/sofia_regular"
             android:text="Price"
             android:textAlignment="textStart"
