Database and menu changed, please make sure to update to fix menu not showing up. Add-ins have been added to database. Customize button now pulls up a popup window for add-ins to be inserted later.

--- a/app/src/main/res/layout/activity_order_menu_page.xml
+++ b/app/src/main/res/layout/activity_order_menu_page.xml
@@ -273,6 +273,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/createbutton"
         android:fontFamily="@font/sofia_regular"
+        android:onClick="customizeButton"
         android:text="Customize"
         app:backgroundTint="#491616"
         app:layout_constraintBottom_toTopOf="@+id/MenuWhiteBox"
