--- a/app/src/main/res/layout/customize_popup.xml
+++ b/app/src/main/res/layout/customize_popup.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#92433636">
+    android:background="#92433636"
+    tools:context=".OrderMenuPageActivity">
+
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -20,13 +22,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/popup_addin_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="90dp" />
+            android:layout_marginBottom="90dp"
+            android:scrollbars="vertical"
+            android:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/customize_close_button"
