--- a/app/src/main/res/layout/checkbox_item.xml
+++ b/app/src/main/res/layout/checkbox_item.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <CheckBox
         android:id="@+id/addin_checkbox"
-        android:layout_width="316dp"
-        android:layout_height="65dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:buttonTint="#575050"
         android:fontFamily="@font/sofia_regular"
         android:text="Add-in Name Here"
