--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -10,14 +10,12 @@
     <TextView
         android:id="@+id/menuWhiteBox"
         android:layout_width="365dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
+        android:layout_height="100dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +24,7 @@
     <TextView
         android:id="@+id/menuRedBox2"
         android:layout_width="365dp"
-        android:layout_height="380dp"
+        android:layout_height="350dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/bottom_white_stroke_profile_page"
         android:fontFamily="@font/sofia_regular"
@@ -98,9 +96,10 @@
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox"
         app:layout_constraintEnd_toEndOf="@+id/menuWhiteBox"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/menuWhiteBox"
         app:layout_constraintTop_toTopOf="@+id/menuWhiteBox"
+        app:layout_constraintVertical_bias="0.661"
         tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -128,6 +127,18 @@
         app:menu="@menu/navigation_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <TextView
+        android:id="@+id/cart_cost_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total Cost"
+        app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox"
+        app:layout_constraintEnd_toEndOf="@+id/menuWhiteBox"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/menuWhiteBox"
+        app:layout_constraintTop_toTopOf="@+id/menuWhiteBox"
+        app:layout_constraintVertical_bias="0.197" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
