--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/historyTopBox"
+        android:id="@+id/historyTopBox1"
         android:layout_width="match_parent"
         android:layout_height="96dp"
         android:background="@drawable/top_page_red_curved_sides"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/backArrow2"
+        android:id="@+id/backArrow5"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
@@ -54,7 +54,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/topMessage2"
+        android:id="@+id/topMessage5"
         android:layout_width="match_parent"
         android:layout_height="26dp"
         android:background="@drawable/top_page_red_curved"
@@ -65,7 +65,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
