--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".LockScreenActivity">
 
     <TextView
-        android:id="@+id/historyTopBox"
+        android:id="@+id/historyTopBox1"
         android:layout_width="match_parent"
         android:layout_height="96dp"
         android:background="@drawable/top_page_red_curved_sides"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/topMessage2"
+        android:id="@+id/topMessage5"
         android:layout_width="match_parent"
         android:layout_height="26dp"
         android:background="@drawable/top_page_red_curved"
@@ -32,7 +32,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />
 
     <Button
         android:id="@+id/finger_print"
