--- a/app/src/main/res/layout/activity_order_menu_page.xml
+++ b/app/src/main/res/layout/activity_order_menu_page.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/historyTopBox"
+        android:id="@+id/historyTopBox1"
         android:layout_width="417dp"
         android:layout_height="96dp"
         android:background="#FFFFFF"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/backArrow2"
+        android:id="@+id/backArrow5"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
@@ -36,7 +36,7 @@
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/topMessage2"
+        android:id="@+id/topMessage5"
         android:layout_width="0dp"
         android:layout_height="26dp"
         android:background="@drawable/profile_page_top_curved_box"
@@ -47,7 +47,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />
 
     <TextView
         android:id="@+id/MenuRedBox"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />
 
     <TextView
         android:id="@+id/MenuWhiteBox"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />
 
     <Button
         android:id="@+id/CountinueButton"
