-updated customer support page -working on firebase increment

--- a/app/src/main/res/layout/activity_customer_support_page.xml
+++ b/app/src/main/res/layout/activity_customer_support_page.xml
@@ -65,39 +65,113 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <TextView
-        android:id="@+id/MenuRedBox"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="200dp"
-        android:background="@drawable/support_red_box"
-        android:fontFamily="sans-serif-thin"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="100sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMessage5"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/security_text3"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="176dp"
+        android:background="@drawable/support_red_box"
         android:fontFamily="@font/sofia_regular"
-        android:text="CarolinaCoffeeApp@gmail.com"
-        android:textAllCaps="false"
-        android:textColor="#C1C1C1"
+        android:letterSpacing="0.2"
+        android:paddingStart="5dp"
+        android:text="Email Support"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/MenuRedBox"
-        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
-        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
-        app:layout_constraintTop_toTopOf="@+id/MenuRedBox" />
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/topMessage5"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/topMessage5"
+        app:layout_constraintTop_toBottomOf="@+id/topMessage5" />
+
+    <TextView
+        android:id="@+id/passcode_text_box3"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:background="#CC800B0B"
+        android:fontFamily="@font/sofia_regular"
+        android:paddingStart="30dp"
+        android:paddingTop="12dp"
+        android:text="CarolinaCoffeeApp@gmail.com"
+        android:textAlignment="textStart"
+        android:textColor="#CCFFFFFF"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/security_text3" />
+
+    <TextView
+        android:id="@+id/notifications_text3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/support_red_box"
+        android:fontFamily="@font/sofia_regular"
+        android:letterSpacing="0.2"
+        android:paddingStart="5dp"
+        android:text="Phone Support"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/passcode_text_box3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/passcode_text_box3"
+        app:layout_constraintTop_toBottomOf="@+id/passcode_text_box3" />
+
+    <TextView
+        android:id="@+id/inbox_messages_text_box3"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:background="#CC800B0B"
+        android:fontFamily="@font/sofia_regular"
+        android:paddingStart="30dp"
+        android:paddingTop="12dp"
+        android:text="912-323-6868"
+        android:textAlignment="textStart"
+        android:textColor="#CCFFFFFF"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/notifications_text3"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/notifications_text3"
+        app:layout_constraintTop_toBottomOf="@+id/notifications_text3" />
+
+    <Button
+        android:id="@+id/red_back_button_2"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
+        android:letterSpacing="0.25"
+        android:onClick="settingsPage"
+        android:paddingStart="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="@color/red_ec"
+        app:layout_constraintBottom_toBottomOf="@+id/whiteBox5"
+        app:layout_constraintEnd_toEndOf="@+id/whiteBox5"
+        app:layout_constraintStart_toStartOf="@+id/whiteBox5"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
+
+    <TextView
+        android:id="@+id/whiteBox5"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:background="@drawable/profile_page_bottom_curved_box"
+        android:backgroundTint="#99FFFFFF"
+        android:fontFamily="@font/sofia_regular"
+        android:paddingStart="20dp"
+        android:paddingTop="10dp"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/inbox_messages_text_box3"
+        app:layout_constraintStart_toStartOf="@+id/inbox_messages_text_box3"
+        app:layout_constraintTop_toBottomOf="@+id/inbox_messages_text_box3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
