--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -173,15 +173,31 @@
                 android:id="@+id/point_count_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
-                android:text="100 points collected!"
+                android:text="points collected!"
                 android:textColor="#000000"
                 android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
                 app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
                 app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top" />
+
+            <TextView
+                android:id="@+id/earned_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                app:layout_constraintBottom_toBottomOf="@+id/rewards_white_box_top"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
+                app:layout_constraintHorizontal_bias="0.092"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top"
+                app:layout_constraintVertical_bias="0.275" />
 
             <TextView
                 android:id="@+id/point_bar_leftside"
