--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -42,7 +42,7 @@
         android:layout_height="96dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/sofia_regular"
-        android:text="Order"
+        android:text="@string/order_text"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
@@ -69,7 +69,7 @@
         android:layout_height="26dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
-        android:text="Review your Order"
+        android:text="@string/review_your_order"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -100,7 +100,7 @@
         app:layout_constraintStart_toStartOf="@+id/menuWhiteBox1"
         app:layout_constraintTop_toTopOf="@+id/menuWhiteBox1"
         app:layout_constraintVertical_bias="0.661"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reviewOrderRecycler"
