--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -117,7 +117,6 @@
                 android:layout_marginEnd="150dp"
                 android:background="@drawable/profile_page_all_curved_corners_red"
                 app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
-                app:layout_constraintHorizontal_bias="0.479"
                 app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
                 app:layout_constraintTop_toBottomOf="@+id/point_count_text" />
 
@@ -202,6 +201,23 @@
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="@+id/congratsBox"
                 app:layout_constraintTop_toBottomOf="@+id/coffee_image" />
+
+            <ProgressBar
+                android:id="@+id/rewardsProgress"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="278dp"
+                android:layout_height="30dp"
+                android:indeterminate="false"
+                android:layoutDirection="ltr"
+                android:max="5"
+                android:progress="4"
+
+                app:layout_constraintBottom_toBottomOf="@+id/rewards_white_box_top"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
+                app:layout_constraintHorizontal_bias="0.105"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top"
+                app:layout_constraintVertical_bias="0.875" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
