--- a/app/src/main/res/layout/activity_inbox_page.xml
+++ b/app/src/main/res/layout/activity_inbox_page.xml
@@ -19,12 +19,12 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/whiteBox2"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/whiteBox2"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="334dp"
         android:layout_height="340dp"
         android:layout_marginBottom="28dp"
@@ -53,6 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/topMessage6"
