--- a/app/src/main/res/layout/activity_inbox_page.xml
+++ b/app/src/main/res/layout/activity_inbox_page.xml
@@ -19,12 +19,12 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/messageList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/messageList"
         android:layout_width="334dp"
         android:layout_height="340dp"
         android:layout_marginBottom="28dp"
