--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -9,7 +9,8 @@
     android:layout_marginTop="10dp"
     android:layout_marginBottom="20dp"
     android:scrollbars="vertical"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    app:cardElevation="4dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,53 +18,54 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/message"
+            android:id="@+id/lbl_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Message: "
+            android:text="@string/lbl_message"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/firstname"
+            android:id="@+id/message"
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="TextView"
+
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/message"
+            app:layout_constraintStart_toEndOf="@+id/lbl_message"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/subject"
+            android:id="@+id/lbl_subject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Subject :   "
+            android:text="@string/subject"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/message" />
 
         <TextView
-            android:id="@+id/lastname"
+            android:id="@+id/subject"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="TextView"
+
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/subject"
-            app:layout_constraintTop_toBottomOf="@+id/firstname" />
+            app:layout_constraintStart_toEndOf="@+id/lbl_subject"
+            app:layout_constraintTop_toBottomOf="@+id/message" />
 
         <TextView
-            android:id="@+id/body"
+            android:id="@+id/lbl_body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -76,18 +78,18 @@
             app:layout_constraintTop_toBottomOf="@+id/subject" />
 
         <TextView
-            android:id="@+id/age"
+            android:id="@+id/body"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="TextView"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/body"
-            app:layout_constraintTop_toBottomOf="@+id/lastname" />
+            app:layout_constraintStart_toEndOf="@+id/lbl_body"
+            app:layout_constraintTop_toBottomOf="@+id/subject" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
