--- a/app/src/main/res/layout/activity_inbox_page.xml
+++ b/app/src/main/res/layout/activity_inbox_page.xml
@@ -8,6 +8,29 @@
     android:background="@drawable/settingpagebackground"
     tools:context="com.example.carolina_coffee.InboxPageActivity">
 
+    <Button
+        android:id="@+id/editInformationButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
+        android:letterSpacing="0.25"
+        android:onClick="back_button"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="@color/red_ec"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="@+id/messageList"
+        app:layout_constraintStart_toStartOf="@+id/messageList"
+        app:layout_constraintTop_toBottomOf="@+id/messageList" />
+
     <TextView
         android:id="@+id/new_reward_box"
         android:layout_width="335dp"
@@ -20,7 +43,6 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/messageList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messages_box" />
@@ -28,8 +50,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messageList"
         android:layout_width="334dp"
-        android:layout_height="340dp"
-        android:layout_marginBottom="28dp"
+        android:layout_height="330dp"
         android:background="@drawable/profile_page_bottom_curved_box"
         android:backgroundTint="#99FFFFFF"
         android:fontFamily="@font/sofia_regular"
@@ -37,7 +58,6 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +110,7 @@
         android:id="@+id/messages_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing=".30"
         android:text="@string/messages_textbox"
@@ -98,7 +118,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topMessage6" />
 
@@ -117,5 +137,18 @@
         app:layout_constraintEnd_toEndOf="@+id/new_reward_box"
         app:layout_constraintStart_toStartOf="@+id/new_reward_box"
         app:layout_constraintTop_toTopOf="@+id/new_reward_box" />
+
+    <TextView
+        android:id="@+id/backArrow2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/left_arrow"
+        android:onClick="back_button"
+        app:itemRippleColor="#C1C1C1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
