--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,145 @@
                 app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top" />
 
             <TextView
+                android:id="@+id/order_now_box"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/settings_page_all_white_curved_corners"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rewards_white_box_top" />
+
+            <TextView
+                android:id="@+id/order_now"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="Order now!"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="@+id/order_now_box"
+                app:layout_constraintStart_toStartOf="@+id/order_now_box"
+                app:layout_constraintTop_toTopOf="@+id/order_now_box" />
+
+            <TextView
+                android:id="@+id/order_now2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="Try our new Americano Coffee today!"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/order_now_box"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/order_now_box"
+                app:layout_constraintTop_toBottomOf="@+id/order_now" />
+
+            <Button
+                android:id="@+id/order_now_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:background="@drawable/profile_page_all_curved_corners_red"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple_grayc1c1"
+                android:letterSpacing="0.25"
+                android:onClick="order_coffee"
+                android:paddingStart="0dp"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:text="Order"
+                android:textColor="#FFFFFF"
+                app:backgroundTint="@color/red_ec"
+                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+                app:layout_constraintEnd_toEndOf="@+id/order_now_box"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/order_now_box"
+                app:layout_constraintTop_toBottomOf="@+id/order_now2"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/account_box"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/settings_page_all_white_curved_corners"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/order_now_box" />
+
+            <TextView
+                android:id="@+id/account_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="Account Settings"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="@+id/account_box"
+                app:layout_constraintStart_toStartOf="@+id/account_box"
+                app:layout_constraintTop_toTopOf="@+id/account_box" />
+
+            <TextView
+                android:id="@+id/account_settings2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="Finnish settings up your account!"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="@+id/account_box"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/account_box"
+                app:layout_constraintTop_toBottomOf="@+id/account_settings" />
+
+            <Button
+                android:id="@+id/act_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:background="@drawable/profile_page_all_curved_corners_red"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple_grayc1c1"
+                android:letterSpacing="0.25"
+                android:onClick="account_page"
+                android:paddingStart="0dp"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:text=" Account "
+                android:textColor="#FFFFFF"
+                android:visibility="invisible"
+                app:backgroundTint="@color/red_ec"
+                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+                app:layout_constraintEnd_toEndOf="@+id/account_box"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/account_box"
+                app:layout_constraintTop_toBottomOf="@+id/account_settings2"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
                 android:id="@+id/earned_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -150,16 +289,6 @@
                 app:layout_constraintTop_toTopOf="@+id/circle_coffee"
                 app:srcCompat="@drawable/coffee_cup" />
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_marginTop="32dp"
-                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
-                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
-                app:layout_constraintTop_toBottomOf="@+id/rewards_white_box_top"
-                app:srcCompat="@drawable/coffee1" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -198,7 +327,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="80dp"
         android:foreground="@drawable/ripple_red_25_corners"
-        android:onClick="profilePage"
+        android:onClick="historyPageButton"
         app:layout_constraintEnd_toEndOf="@+id/top_blank_inbox_saved"
         app:layout_constraintTop_toBottomOf="@+id/MenuRedBox"
         app:srcCompat="@drawable/saved_icon" />
@@ -223,7 +352,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.2"
-        android:text="Saved"
+        android:text="History"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/saved_icon"
