-bug fix for a few buttons

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -82,9 +82,15 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/roundedbutton"
-        android:backgroundTint="#9E322626"
-        android:text="Go to Cart"
+        android:backgroundTint="@color/red_ec"
         android:onClick="goToCartButton"
+        android:text=" Go to Cart "
+        android:letterSpacing="0.25"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
