--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/payPageButton"
-        android:icon="@drawable/mail"
+        android:icon="@drawable/bag"
         android:title="Pay"/>
 
     <item
