- minor changes to formatting.

--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -119,9 +119,9 @@
         android:id="@+id/orderNameAndPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sofia_regular"
         android:layout_marginTop="16dp"
-        android:text="Order and Price"
+        android:fontFamily="@font/sofia_regular"
+        android:text="History"
         android:textColor="#EAE0E0"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox"
@@ -133,7 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sofia_regular"
-        android:text="Card Used:"
+        android:text="Currently no order history"
         android:textColor="#EAE0E0"
         app:layout_constraintEnd_toEndOf="@+id/orderNameAndPrice"
         app:layout_constraintStart_toStartOf="@+id/orderNameAndPrice"
